added features desctiptions and notes

--- a/features.html
+++ b/features.html
@@ -32,25 +32,64 @@
         <div id="tutorials">
           <h3>Wanted features</h3>
           <h4>
-                <ul>
+                <ul class="fetures">
                   <li>displaying Tooltip after hovering over interactible objects</li>
-                  <ul class="note">
-                    <li>
-
-                    </li>
-                  </ul>
+                      <ul class="note"><li class="note-head">note:</li>
+                      <li>
+                      tooltip can be turned off in game options.
+                      </li>
+                      </ul>
                   <li>taking interactible objects to inventory</li>
                   <li>droping interactible object from inventory</li>
+                      <ul class="note"><li class="note-head">note:</li>
+                      <li>
+                      We need physic applied to the object. Object will drop on the floor.
+                      </li>
+                      </ul>
                   <li>object investigation</li>
+                      <ul class="note"><li class="note-head">note:</li>
+                      <li>
+                      Press right mouse button to investigate interactible object.
+                      Being in investigation mode if you press E you will add item to inventory.
+                      </li>
+                      </ul>
                   <li>taking object to inventory</li>
                   <li>using objects from inventory</li>
+                      <ul class="note"><li class="note-head">note:</li>
+                      <li>
+                      research this - resident evil 7. Probably if object is needed you have to look at
+                      place where u can use it ( for example a lamp ) then open inventory and
+                      left mouse button click on the object from inventory to use it. If wrong is picked display
+                      "can't use it here".
+                      </li>
+                      </ul>
                   <li>opening locked door with key from inventory</li>
+                      <ul class="note"><li class="note-head">note:</li>
+                      <li>
+                      Another aproach for this is for example having a keycard in inventory and door will
+                      automaticaly open. We don't need to open inventory and selecting keycard.
+                      </li>
+                      </ul>
                   <li>solving puzzle to unlock door</li>
                   <li>reading notes and book ( player can open one page, text is editable from code,
-                    no ability to investigate readable object.)</li>
+                    no ability to investigate readable object.)
+                  </li>
+                      <ul class="note"><li class="note-head">note:</li>
+                      <li>
+                      It will be just a text from code with nice font. In background a paper image.
+                      </li>
+                      </ul>
                   <li>moving bigger objects from one place to another
                     ( big object - to big for having them in inventory )</li>
                   <li>loading saving game</li>
+                  <li>throwing a ball to basket ( basketball )</li>
+                      <ul class="note"><li class="note-head">note:</li>
+                      <li>
+                      u can pick a ball object. It will allow to spawn one projectile.
+                      If u score few point you will
+                      unlock something interesting.
+                      </li>
+                      </ul>
                 </ul>
           </h4>
         </div>
