--- a/arttool_anim_tool.html
+++ b/arttool_anim_tool.html
@@ -32,8 +32,9 @@
         <div id='totorials'>
           <h3>Epic Animation Rigging Tool Tips ( Exporting Rigged Character from Maya to UE4 ).</h3>
           <h4>
+
             <ul class='list-rig-01'>
-            <li>1. build rig.</li>
+            <li><b>1. build rig.</b></li>
             <li>- creating skeleton ( set number of bones ).</li>
               <ul class='list-rig-02'><li>+ add rig modules ( we can add more bones for different type of elements ).</li></ul>
               <ul class='list-rig-02'><li>+ we can save created template at this stage.</li></ul>
@@ -60,7 +61,7 @@
               <ul class='list-rig-02'><li>+ saved changes will be visible in animations that are using these rigs.</li></ul>
             </ul>
             <ul class='list-rig-01'>
-            <li>2. add character for animation.</li>
+            <li><b>2. add character for animation.</b></li>
             <li>- different functions of control rig.</li>
               <ul class='list-rig-02'><li>+ knee rotation.</li></ul>
               <ul class='list-rig-02'><li>+ auto hips ( hips are automatically rotated by legs ).</li></ul>
@@ -86,7 +87,7 @@
             <li>- match over frame range.</li>
             </ul>
             <ul class='list-rig-01'>
-            <li>3. Exporting skeleton and mesh to UE4.</li>
+            <li><b>3. Exporting skeleton and mesh to UE4.</b></li>
             <li>- pick from A.R.T menu "edit existing character".</li>
             <li>- select your character and chose "edit export file".</li>
             <li>- in outliner select root and mesh and go to file > export selection.</li>
